# delivery-api

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
artifacts/: model_artifact.json
cache_utils/: Dockerfile  insert_venue_preparation.py  venue_preparation.csv
delivery_api/: __main__.py  router.py
delivery_api/errors/: venue_error.py
delivery_api/models/: delivery_prediction.py  preprocessed_order.py  raw_order.py
delivery_api/services/: feature_service.py  model_service.py
delivery_api/utils/: redis_client.py
tests/: test_router.py
tests/services/: test_feature_service.py  test_model_service.py
tests/utils/: test_redis_client.py
