[tool.poetry]
name = "delivery-api"
version = "0.1.0"
description = ""
authors = ["Yesid Lopez <<yesid.leonardo.lopez@hotmail.com>>"]
readme = "README.md"
packages = [{include = "delivery_api"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
