[tool.poetry]
name = "delivery-api"
version = "0.1.0"
description = ""
authors = ["Yesid Lopez <<yesid.leonardo.lopez@hotmail.com>>"]
readme = "README.md"
packages = [{include = "delivery_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
xgboost = "2.0.0"
scikit-learn = "1.3.1"
pydantic = "^2.4.2"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
pytest = "^7.4.3"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
